src/main/java/pro/ganyushkin/mimir/plant_name_parser/service/parser/antlr/PlantNamesParser.java
package pro.ganyushkin.mimir.plant_name_parser.service.parser.antlr;// Generated from com\seed\search_service\name_parser\parser\PlantNames.g4 by ANTLR 4.9.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PlantNamesParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, DOT=2, PARENTS=3, BRACKET=4, COMMA=5, INSETDELIMITER=6, STR=7, SUBSPECIESPREFIX=8, 
		VARIETYPREFIX=9, SEL=10, FORMPREFIX=11;
	public static final int
		RULE_dot = 0, RULE_insetdelimiter = 1, RULE_namestr = 2, RULE_genus = 3, 
		RULE_species = 4, RULE_subspecies = 5, RULE_variety = 6, RULE_abbr = 7, 
		RULE_cultivarname = 8, RULE_cultivar = 9, RULE_form = 10, RULE_alternative = 11, 
		RULE_plantname = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"dot", "insetdelimiter", "namestr", "genus", "species", "subspecies", 
			"variety", "abbr", "cultivarname", "cultivar", "form", "alternative", 
			"plantname"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'.'", null, null, "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "DOT", "PARENTS", "BRACKET", "COMMA", "INSETDELIMITER", "STR", 
			"SUBSPECIESPREFIX", "VARIETYPREFIX", "SEL", "FORMPREFIX"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PlantNames.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PlantNamesParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class DotContext extends ParserRuleContext {
		public TerminalNode DOT() { return getToken(PlantNamesParser.DOT, 0); }
		public DotContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dot; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantNamesListener ) ((PlantNamesListener)listener).enterDot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantNamesListener ) ((PlantNamesListener)listener).exitDot(this);
		}
	}

	public final DotContext dot() throws RecognitionException {
		DotContext _localctx = new DotContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_dot);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InsetdelimiterContext extends ParserRuleContext {
		public TerminalNode INSETDELIMITER() { return getToken(PlantNamesParser.INSETDELIMITER, 0); }
		public InsetdelimiterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_insetdelimiter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantNamesListener ) ((PlantNamesListener)listener).enterInsetdelimiter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantNamesListener ) ((PlantNamesListener)listener).exitInsetdelimiter(this);
		}
	}

	public final InsetdelimiterContext insetdelimiter() throws RecognitionException {
		InsetdelimiterContext _localctx = new InsetdelimiterContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_insetdelimiter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			match(INSETDELIMITER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NamestrContext extends ParserRuleContext {
		public TerminalNode STR() { return getToken(PlantNamesParser.STR, 0); }
		public NamestrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namestr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantNamesListener ) ((PlantNamesListener)listener).enterNamestr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantNamesListener ) ((PlantNamesListener)listener).exitNamestr(this);
		}
	}

	public final NamestrContext namestr() throws RecognitionException {
		NamestrContext _localctx = new NamestrContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_namestr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			match(STR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GenusContext extends ParserRuleContext {
		public NamestrContext namestr() {
			return getRuleContext(NamestrContext.class,0);
		}
		public GenusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_genus; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantNamesListener ) ((PlantNamesListener)listener).enterGenus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantNamesListener ) ((PlantNamesListener)listener).exitGenus(this);
		}
	}

	public final GenusContext genus() throws RecognitionException {
		GenusContext _localctx = new GenusContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_genus);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			namestr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SpeciesContext extends ParserRuleContext {
		public NamestrContext namestr() {
			return getRuleContext(NamestrContext.class,0);
		}
		public SpeciesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_species; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantNamesListener ) ((PlantNamesListener)listener).enterSpecies(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantNamesListener ) ((PlantNamesListener)listener).exitSpecies(this);
		}
	}

	public final SpeciesContext species() throws RecognitionException {
		SpeciesContext _localctx = new SpeciesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_species);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			namestr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubspeciesContext extends ParserRuleContext {
		public TerminalNode SUBSPECIESPREFIX() { return getToken(PlantNamesParser.SUBSPECIESPREFIX, 0); }
		public List<NamestrContext> namestr() {
			return getRuleContexts(NamestrContext.class);
		}
		public NamestrContext namestr(int i) {
			return getRuleContext(NamestrContext.class,i);
		}
		public SubspeciesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subspecies; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantNamesListener ) ((PlantNamesListener)listener).enterSubspecies(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantNamesListener ) ((PlantNamesListener)listener).exitSubspecies(this);
		}
	}

	public final SubspeciesContext subspecies() throws RecognitionException {
		SubspeciesContext _localctx = new SubspeciesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_subspecies);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			match(SUBSPECIESPREFIX);
			setState(38); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(37);
				namestr();
				}
				}
				setState(40); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==STR );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarietyContext extends ParserRuleContext {
		public TerminalNode VARIETYPREFIX() { return getToken(PlantNamesParser.VARIETYPREFIX, 0); }
		public List<NamestrContext> namestr() {
			return getRuleContexts(NamestrContext.class);
		}
		public NamestrContext namestr(int i) {
			return getRuleContext(NamestrContext.class,i);
		}
		public VarietyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variety; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantNamesListener ) ((PlantNamesListener)listener).enterVariety(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantNamesListener ) ((PlantNamesListener)listener).exitVariety(this);
		}
	}

	public final VarietyContext variety() throws RecognitionException {
		VarietyContext _localctx = new VarietyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_variety);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(VARIETYPREFIX);
			setState(44); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(43);
				namestr();
				}
				}
				setState(46); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==STR );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AbbrContext extends ParserRuleContext {
		public TerminalNode STR() { return getToken(PlantNamesParser.STR, 0); }
		public TerminalNode DOT() { return getToken(PlantNamesParser.DOT, 0); }
		public AbbrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_abbr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantNamesListener ) ((PlantNamesListener)listener).enterAbbr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantNamesListener ) ((PlantNamesListener)listener).exitAbbr(this);
		}
	}

	public final AbbrContext abbr() throws RecognitionException {
		AbbrContext _localctx = new AbbrContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_abbr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(STR);
			setState(49);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CultivarnameContext extends ParserRuleContext {
		public List<NamestrContext> namestr() {
			return getRuleContexts(NamestrContext.class);
		}
		public NamestrContext namestr(int i) {
			return getRuleContext(NamestrContext.class,i);
		}
		public List<AbbrContext> abbr() {
			return getRuleContexts(AbbrContext.class);
		}
		public AbbrContext abbr(int i) {
			return getRuleContext(AbbrContext.class,i);
		}
		public CultivarnameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cultivarname; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantNamesListener ) ((PlantNamesListener)listener).enterCultivarname(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantNamesListener ) ((PlantNamesListener)listener).exitCultivarname(this);
		}
	}

	public final CultivarnameContext cultivarname() throws RecognitionException {
		CultivarnameContext _localctx = new CultivarnameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_cultivarname);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(51);
					namestr();
					}
					} 
				}
				setState(56);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(67);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(58); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(57);
						namestr();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(60); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 2:
				{
				setState(63); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(62);
						abbr();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(65); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			}
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STR) {
				{
				{
				setState(69);
				namestr();
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CultivarContext extends ParserRuleContext {
		public List<TerminalNode> PARENTS() { return getTokens(PlantNamesParser.PARENTS); }
		public TerminalNode PARENTS(int i) {
			return getToken(PlantNamesParser.PARENTS, i);
		}
		public CultivarnameContext cultivarname() {
			return getRuleContext(CultivarnameContext.class,0);
		}
		public TerminalNode SEL() { return getToken(PlantNamesParser.SEL, 0); }
		public CultivarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cultivar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantNamesListener ) ((PlantNamesListener)listener).enterCultivar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantNamesListener ) ((PlantNamesListener)listener).exitCultivar(this);
		}
	}

	public final CultivarContext cultivar() throws RecognitionException {
		CultivarContext _localctx = new CultivarContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_cultivar);
		try {
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PARENTS:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(75);
				match(PARENTS);
				setState(76);
				cultivarname();
				setState(77);
				match(PARENTS);
				}
				}
				break;
			case SEL:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(79);
				match(SEL);
				setState(80);
				cultivarname();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormContext extends ParserRuleContext {
		public TerminalNode FORMPREFIX() { return getToken(PlantNamesParser.FORMPREFIX, 0); }
		public List<NamestrContext> namestr() {
			return getRuleContexts(NamestrContext.class);
		}
		public NamestrContext namestr(int i) {
			return getRuleContext(NamestrContext.class,i);
		}
		public FormContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_form; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantNamesListener ) ((PlantNamesListener)listener).enterForm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantNamesListener ) ((PlantNamesListener)listener).exitForm(this);
		}
	}

	public final FormContext form() throws RecognitionException {
		FormContext _localctx = new FormContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_form);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(FORMPREFIX);
			setState(85); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(84);
				namestr();
				}
				}
				setState(87); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==STR );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlternativeContext extends ParserRuleContext {
		public List<TerminalNode> BRACKET() { return getTokens(PlantNamesParser.BRACKET); }
		public TerminalNode BRACKET(int i) {
			return getToken(PlantNamesParser.BRACKET, i);
		}
		public List<NamestrContext> namestr() {
			return getRuleContexts(NamestrContext.class);
		}
		public NamestrContext namestr(int i) {
			return getRuleContext(NamestrContext.class,i);
		}
		public AlternativeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alternative; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantNamesListener ) ((PlantNamesListener)listener).enterAlternative(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantNamesListener ) ((PlantNamesListener)listener).exitAlternative(this);
		}
	}

	public final AlternativeContext alternative() throws RecognitionException {
		AlternativeContext _localctx = new AlternativeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_alternative);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(BRACKET);
			setState(91); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(90);
				namestr();
				}
				}
				setState(93); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==STR );
			setState(95);
			match(BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlantnameContext extends ParserRuleContext {
		public GenusContext genus() {
			return getRuleContext(GenusContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PlantNamesParser.EOF, 0); }
		public InsetdelimiterContext insetdelimiter() {
			return getRuleContext(InsetdelimiterContext.class,0);
		}
		public List<AlternativeContext> alternative() {
			return getRuleContexts(AlternativeContext.class);
		}
		public AlternativeContext alternative(int i) {
			return getRuleContext(AlternativeContext.class,i);
		}
		public SpeciesContext species() {
			return getRuleContext(SpeciesContext.class,0);
		}
		public SubspeciesContext subspecies() {
			return getRuleContext(SubspeciesContext.class,0);
		}
		public VarietyContext variety() {
			return getRuleContext(VarietyContext.class,0);
		}
		public CultivarContext cultivar() {
			return getRuleContext(CultivarContext.class,0);
		}
		public FormContext form() {
			return getRuleContext(FormContext.class,0);
		}
		public PlantnameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plantname; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantNamesListener ) ((PlantNamesListener)listener).enterPlantname(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantNamesListener ) ((PlantNamesListener)listener).exitPlantname(this);
		}
	}

	public final PlantnameContext plantname() throws RecognitionException {
		PlantnameContext _localctx = new PlantnameContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_plantname);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			genus();
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INSETDELIMITER) {
				{
				setState(98);
				insetdelimiter();
				}
			}

			setState(102);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(101);
				alternative();
				}
				break;
			}
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STR) {
				{
				setState(104);
				species();
				}
			}

			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==BRACKET) {
				{
				setState(107);
				alternative();
				}
			}

			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SUBSPECIESPREFIX) {
				{
				setState(110);
				subspecies();
				}
			}

			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VARIETYPREFIX) {
				{
				setState(113);
				variety();
				}
			}

			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PARENTS || _la==SEL) {
				{
				setState(116);
				cultivar();
				}
			}

			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FORMPREFIX) {
				{
				setState(119);
				form();
				}
			}

			setState(122);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}